[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Daniel Igelnik <igelnik@gmail.com>, Vita Preskovsky <vita.preskovsky@gmail.com> "]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
# python = "^3.13"
# streamlit = "^1.53.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
