[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Daniel Igelnik <igelnik@gmail.com>, Vita Preskovsky <vita.preskovsky@gmail.com> "]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.28.0"
pydeck = "^0.8.0"
unidecode = "^1.3.0"
pandas = "^1.5.0"
requests = "^2.31.0"
altair = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
